Revision history for Perl extension Test::Apocalypse

{{$NEXT}}

	Converted to Dist::Zilla for the release process!
	Tweaked the internals to cleanup automated issues
	Changed some plugins so they execute tests as TODO, to not cause spurious FAILs
	Replaced Test::Dependencies with homebrew solution utilizing Perl::PrereqScanner
	Removed Test::Module::Used plugin ( see above )

0.11

	Added Test::Vars to the testsuite
	Added Test::Script to the testsuite
	More POD tweaks
	Bumped Test::NoPlan prereq to 0.0.6 so it works properly under Test::Block
	Bumped Test::Pod prereq to 1.41 so it doesn't complain about L<text|scheme> being invalid
	Bumped Test::Module::Used prereq to 0.1.9 so we can use excluded modules properly
	Added Pod::Coverage::TrustPod as the coverage class for Test::Pod::Coverage
	Fixed a bug in Test::Spelling where the file stopwords weren't added right
	Fixed a bug in OutdatedPrereqs where it complained if the CPAN version was older than what was specified.
	Added Test::Pod::LinkCheck to the testsuite

0.10

	Added smart AUTOMATED_TESTING logic so we are now behaving in the same way as Alias envisaged
		This means certain tests are disabled when AUTOMATED is set :)
	Minor POD/Build.PL/test output tweaks
	Added META.json to FileChecks test
	Bumped Test::Strict prereq to 0.14 because now it works with Moose!
	Tweaked the module loading logic so we have less duplication now + less bugs, yay!
	Fixed a warning in the OutdatedPrereqs test so we don't cause FAILs with the Test::NoWarnings module :(
	Added Test::NoPlan to the testsuite
	Added debugging of test info, thanks POE::Test::Loops!

0.09

	Added the PERL_APOCALYPSE env var to override test selection and test all plugins
	Run the plugins in alphabetical order, which is prettier :)
	Removed the crappy stopwords addition in Pod_Spelling test
	Added Test::JSON::Meta to the testsuite

0.08

	Minor POD tweaks
	Added Test::Pod::No404s to the testsuite