@@ -40,7 +40,7 @@ sub _load_yml {
 	}
 
 	# massage the data
-	$data = $data->{'provides'};	## no critic ( ProhibitAccessOfPrivateData )
+	$data = $data->{'provides'};
 
 	# Okay, how many modules do we have?
 	if ( scalar keys %$data > 0 ) {
