@@ -5,15 +5,12 @@ package Test::Apocalypse::Fixme;
 use Test::More;
 use Test::Fixme 0.04;
 
-sub _is_release { 1 }
-sub _is_todo { 1 }
-
 sub do_test {
 	TODO: {
 		local $TODO = "Fixme";
 		run_tests(
 			'where'			=> 'lib',
-			'match'			=> qr/[F]IXME|[T]ODO|[X]XX/,
+			'match'			=> qr/[F]IXME|[T]ODO|[X]XX/, # zany format so it won't pick up this file!
 			'filename_match'	=> qr/\.(?:pm|pl|xs)$/, # specify this so we skip .c files generated by XS
 		);
 	}
