@@ -4,8 +4,6 @@ package Test::Apocalypse::Pod_LinkCheck;
 
 use Test::Pod::LinkCheck 0.004;
 
-sub _is_release { 1 }
-
 sub do_test {
 	Test::Pod::LinkCheck->new->all_pod_ok();
 
