@@ -5,9 +5,6 @@ package Test::Apocalypse::Signature;
 use Test::More;
 use Test::Signature 1.10;
 
-# Various people have said SIGNATURE tests are INSANE on end-user install...
-sub _is_release { 1 }
-
 sub do_test {
 	# do we have a signature file?
 	if ( -e 'SIGNATURE' ) {
